apps/gitlab/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:18.10.1-ce.0
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - mountPath: /var/opt/gitlab
          name: gitlab-storage
      volumes:
      - name: gitlab-storage
        persistentVolumeClaim:
          claimName: gitlab-pvc
